fixed spacing

--- a/frontend/src/components/Hero.css
+++ b/frontend/src/components/Hero.css
@@ -203,8 +203,8 @@
     position: absolute;
     display: flex;
     flex-direction: column;
-    left: -1.5rem;
-    bottom: 40%;
+    right: 12rem;
+    bottom: 30%;
 }
 
 @media (min-width: 1024px) {
@@ -226,7 +226,7 @@
     .hero-annotation-arrow {
         width: 2rem;
         height: 2rem;
-        margin-left: 8rem;
+        margin-left: 7rem;
     }
 
     .hero-annotation-title {
